--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,7 +1,6 @@
-{
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
+y{
+  "name": "readyteaz",
+  "version": "1.1.4",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
